<package>
	<name>ros_control_iso</name>
	<version>0.0.1</version>
	<description>ros_control_iso</description>
	<maintainer email="raphael.nage (#) posteo de">Raphael Nagel</maintainer>
	<license>GPLv2</license>
	<url type="repository">https://github.com/compiaffe/ros_control_iso</url>
	<author>Raphael Nagel/author>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>angles</build_depend>
	<build_depend>controller_interface</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>control_toolbox</build_depend>
	<build_depend>realtime_tools</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>forward_command_controller</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>snippets</build_depend>

	<run_depend>angles</run_depend>
	<run_depend>controller_interface</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>control_toolbox</run_depend>
	<run_depend>realtime_tools</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>forward_command_controller</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>snippets</run_depend>

	<export>
		<controller_interface plugin="${prefix}/relay_with_hysteresis.xml"/>
	</export>
</package>